# Game-of-Greed

./: README.md  bots.py  pyproject.toml
.github/workflows/: main.yml
game_of_greed/: GG.py  banker.py  game.py  game_logic.py
tests/: test_banker.py  test_get_scorers.py  test_roll_and_bank.py  test_score_calculater.py  test_sim_advanced.py  test_sim_basic.py  test_validate_keepers.py  test_wanna_play.py
tests/flow/: bank_first_for_two_rounds.sim.txt  bank_one_roll_then_quit.sim.txt  flo.py  one_and_done.sim.txt  quitter.sim.txt
