[tool.poetry]
name = "Game-of-Greed"
version = "0.1.0"
description = ""
authors = ["abdalazez <abdalazzezzalsalahat@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.4"

[tool.poetry.dev-dependencies]
black = "^21.5b1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
